@@ -115,9 +115,6 @@
             <!-- Body -->
             <div class="body-container">
 
-dfd
-
-
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 title-header">
                      <div class="pull-left head-drop">
                         <div class="btn-group">
@@ -141,73 +138,95 @@ dfd
                            <h4 class="claim-header">Phone: 217-819-3040</h4>
 
                            <hr />
-
                           <ul class="nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#contacts">Contacts</a></li>
-                            <li><a data-toggle="tab" href="#servicing-team">Servicing servicing-team</a></li>
-                            <li><a data-toggle="tab" href="#policies">Menu 3</a></li>
-                            <li><a data-toggle="tab" href="#sites">Menu 3</a></li>
-                            <li><a data-toggle="tab" href="#locations">Menu 3</a></li>
-                            <li><a data-toggle="tab" href="#location-groups">Menu 3</a></li>
-                            <li><a data-toggle="tab" href="#departments">Menu 3</a></li>
-                            <li><a data-toggle="tab" href="#reports">Menu 3</a></li>
+                            <li class="active"><a data-toggle="tab" href="#claim-summary">Claim Summary</a></li>
+                            <li><a data-toggle="tab" href="#employer">Employer</a></li>
+                            <li><a data-toggle="tab" href="#policy">Policy</a></li>
+                            <li><a data-toggle="tab" href="#servicing-team">Servicing Team</a></li>
+                            <li><a data-toggle="tab" href="#contacts">Contacts</a></li>
+                            <li><a data-toggle="tab" href="#forms">Forms</a></li>
 
                           </ul>
 
-                           <div class="tab-content">
-                               <div id="contacts" class="tab-pane fade in active">
-                                 <h3>HOME</h3>
+                           	<div class="tab-content">
+                               <div id="claim-summary" class="tab-pane fade in active">
+                                 <h3>Claim Summary</h3>
                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                               </div>
+
+                               <div id="employer" class="tab-pane fade">
+                                 <h3>Employer</h3>
+                                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                               </div>
+
+                               <div id="policy" class="tab-pane fade">
+                                 <h3>Policy</h3>
+                                 <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                                </div>
 
                                <div id="servicing-team" class="tab-pane fade">
                                  <h3>Servicing Team</h3>
-                                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-                               </div>
-
-                               <div id="policies" class="tab-pane fade">
-                                 <h3>Policies</h3>
-                                 <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                               </div>
-
-                               <div id="sites" class="tab-pane fade">
-                                 <h3>Menu 1</h3>
                                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                </div>
 
-                               <div id="locations" class="tab-pane fade">
-                                 <h3>Menu 2</h3>
+                               <div id="contacts" class="tab-pane fade">
+                                 <h3>Contacts</h3>
                                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                                </div>
 
-                               <div id="location-groups" class="tab-pane fade">
-                                 <h3>Menu 3</h3>
+                               <div id="forms" class="tab-pane fade">
+                                 <h3>Forms</h3>
+                                 <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                               </div>
+                           	</div>
+
+                          <ul class="nav nav-tabs" id="claim-section">
+                            <li class="active"><a data-toggle="tab" href="#claim-information">Claim Information</a></li>
+                            <li><a data-toggle="tab" href="#questions">Questions</a></li>
+                            <li><a data-toggle="tab" href="#claim-amounts">Claim Amount(s)</a></li>
+                            <li><a data-toggle="tab" href="#calendar">Calendar</a></li>
+                            <li><a data-toggle="tab" href="#journal-entries">Journal Entries</a></li>
+
+                          </ul>
+
+                           	<div class="tab-content">
+                               <div id="claim-information" class="tab-pane fade in active">
+                                 <h3>Claim Summary</h3>
+                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                               </div>
+
+                               <div id="questions" class="tab-pane fade">
+                                 <h3>Employer</h3>
+                                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                               </div>
+
+                               <div id="claim-amounts" class="tab-pane fade">
+                                 <h3>Claim Amount(s)</h3>
                                  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                                </div>
 
-                               <div id="departments" class="tab-pane fade">
-                                 <h3>Menu 1</h3>
+                               <div id="calendar" class="tab-pane fade">
+                                 <h3>Calendar</h3>
                                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                </div>
 
-                               <div id="reports" class="tab-pane fade">
-                                 <h3>Menu 2</h3>
+                               <div id="journal-entries" class="tab-pane fade">
+                                 <h3>Journal Entries</h3>
                                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                                </div>
-                           </div>
+                           	</div>
                         </div>
                      </div>
             </div>
          </div>
       </div>
 
-      <p class="text-center copyright">Copyright &#169; 2016 Insurance Office of America. All rights reserved.</p>
-      <div class="text-center">
+     <div class="text-center copyright">
+         <p">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+      
          <a href="#" data-toggle="tooltip" class="smalllink" title="Internet Explorer 11.x | Google Chrome 50.x | Mozilla Firefox 46.5 | Safari 5.x">Browser Compatibility</a>
-      </div>
-      <p class="text-center copyright">Version 2.3.3</p>
-
-      <script type="text/javascript" src="js/tooltip.js"></script>
-   </body>
+     </div>
+    
+<script type="text/javascript" src="js/tooltip.js"></script>
+</body>
 </html>
-
