@@ -367,9 +367,7 @@
 				<div class="progressContainer">
 					<h4 class="type">December 2015</h4>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-darkblue progress-bar-striped" data-placement="bottom" title="60 Open" data-toggle="tooltip" style="width: 60%">
-					  </div>
-					  <div class="progress-bar progress-bar-blue" data-toggle="tooltip" data-placement="bottom" title="40 Closed" style="width: 40%">
+					  <div class="progress-bar progress-bar-empty" data-toggle="tooltip" data-placement="bottom" title="No Claims" style="width: 100%">
 					  </div>
 					</div>
 				</div>
@@ -395,8 +393,12 @@
       </div>  
     </div>
   
-    <p class="text-center copyright">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
-
+     <div class="text-center copyright">
+         <p">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+      
+         <a href="#" data-toggle="tooltip" class="smalllink" title="Internet Explorer 11.x | Google Chrome 50.x | Mozilla Firefox 46.5 | Safari 5.x">Browser Compatibility</a>
+     </div>
+     
 <script type="text/javascript" src="js/tooltip.js"></script>
 </body>
 </html>
