@@ -209,7 +209,9 @@
                                 <input id="end-date" name="end-date" class="form-control input-md" type="search" placeholder="End Date">
                             </div>
 
-                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-3">
+
+
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-3 spacer">
                                 <label class="control-label sr-only" for="completed-tasks">Show Completed Tasks:</label>
                                 <label for="completed-tasks">
                                 <input name="completed-tasks" id="completed-tasks" value="1" type="checkbox">
@@ -217,7 +219,7 @@
 
                             </div>
 
-                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-3">
+                            <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-3 spacer">
                                 <label class="control-label sr-only" for="show-all-tasks">Show All Tasks:</label>
 
                                 <label for="show-all-tasks">
@@ -226,7 +228,7 @@
                             </div>
 
 
-                            <div class="form-group col-xs-4 col-sm-12 col-md-12 col-lg-12">
+                            <div class="form-group col-xs-4 col-sm-12 col-md-12 col-lg-12 spacer">
                                 <button id="clear-filters" name="clear-filters" class="btn btn-primary"> Clear Filters</button>
                             </div>
                             -->
@@ -396,7 +398,12 @@
         </div>
     </div>
 
-    <p class="text-center copyright">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>   
+     <div class="text-center copyright">
+         <p">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+      
+         <a href="#" data-toggle="tooltip" class="smalllink" title="Internet Explorer 11.x | Google Chrome 50.x | Mozilla Firefox 46.5 | Safari 5.x">Browser Compatibility</a>
+     </div>
+
     <script type="text/javascript" src="js/tooltip.js"></script>
 </body>
 
