@@ -312,7 +312,12 @@
             </div>
         </div>
     </div>
-    <p class="text-center copyright">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+     <div class="text-center copyright">
+         <p">Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+      
+         <a href="#" data-toggle="tooltip" class="smalllink" title="Internet Explorer 11.x | Google Chrome 50.x | Mozilla Firefox 46.5 | Safari 5.x">Browser Compatibility</a>
+     </div>
+
     <script type="text/javascript" src="js/tooltip.js"></script>
 </body>
 
